# XMU-Daily-Reporter

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
.github/workflows/: main.yml  update.yml
include/: config.h  login.h  mail.h  report.h
src/: login.cpp  mail.cpp  main.cpp  report.cpp
